--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,7 +4,6 @@ on: workflow_dispatch
 
 jobs:
   build:
-
     runs-on: windows-latest
     timeout-minutes: 9999
 
@@ -43,6 +42,6 @@ jobs:
         }
     - name: Connect to your RDP 2core- 7GB Ram.
       run: |
-        cmd /c NGROK-CHECK.bat || { Write-Host "Error executing NGROK-CHECK.bat"; exit 1 }
+        cmd /c "NGROK-CHECK.bat"
     - name: All Done! You can close Tab now! Maximum VM time: 6h.
       run: cmd /c loop.bat
